--- a/faq/index.html
+++ b/faq/index.html
@@ -31,7 +31,7 @@
 <meta property="og:url" content="https://orange-ape.cloudvent.net//faq/" />
 <meta property="og:site_name" content="Base" />
 <script type="application/ld+json">
-{"description":"Knowledge base template for Jekyll.","@type":"WebPage","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://orange-ape.cloudvent.net//siteicon.png"}},"url":"https://orange-ape.cloudvent.net//faq/","headline":"Base","@context":"http://schema.org"}</script>
+{"description":"Knowledge base template for Jekyll.","@type":"WebPage","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://orange-ape.cloudvent.net//siteicon.png"}},"headline":"Base","url":"https://orange-ape.cloudvent.net//faq/","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 		<link type="application/atom+xml" rel="alternate" href="https://orange-ape.cloudvent.net//feed.xml" title="Base" />
@@ -90,17 +90,17 @@
 	
 
 		
-		<a href="/faq/" class=" active">FAQ</a>
-	
-	
-
-		
 		<a href="/" class="">Tutorials</a>
 	
 	
 
 		
 		<a href="/videos/" class="">Videos</a>
+	
+	
+
+		
+		<a href="/faq/" class=" active">FAQ</a>
 	
 </nav>
 
